--- a/Inline-center.html
+++ b/Inline-center.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="inline-center.css">
 </head>
 <body>
-  <div class="align'>
+  <div class="align">
     <h1>Verticle center</h1>
   </div>
 </body>
