--- a/Inline-center.html
+++ b/Inline-center.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Reset</title>
-  <link rel="stylesheet" href="inline-center.css">
+  <title>Verticle Center</title>
+  <link rel="stylesheet" href="Inline-center.css
 </head>
 <body>
   <div class="align">
