--- a/Inline-center.html
+++ b/Inline-center.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Verticle Center</title>
-  <link rel="stylesheet" href="Inline-center.css
+  <link rel="stylesheet" href="Inline-center.css">
 </head>
 <body>
   <div class="align">
