--- a/Kevin Powell/Build a Responsive Website/Manage Landing Page/index.html
+++ b/Kevin Powell/Build a Responsive Website/Manage Landing Page/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,400;0,500;0,700;&display=swap"
+      rel="stylesheet">
     <title>Vite App</title>
   </head>
   <body>
-    <h1>Hello There</h1>
+    <header class='primary-header'>
+      <div class='container'>
+        <a href='#'><img src='C:\Users\volfr\My Drive\WebDesignByBuxton\2-LearningFolder\Kevin Powell\Build a Responsive Website\Manage Landing Page\images\logo.svg'></a>
+      </div>
+    </header>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
