--- a/Kevin Powell/Build a Responsive Website/Manage Landing Page/index.html
+++ b/Kevin Powell/Build a Responsive Website/Manage Landing Page/index.html
@@ -14,9 +14,23 @@
   <body>
     <header class='primary-header'>
       <div class='container'>
-        <a href='#'><img src='C:\Users\volfr\My Drive\WebDesignByBuxton\2-LearningFolder\Kevin Powell\Build a Responsive Website\Manage Landing Page\images\logo.svg'></a>
+        <a href='#'><img src='/images/logo.svg'>manage</a>
+        <nav class='primary-navigation'>
+          <ul role='list' class='nav-list'>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Community</a></li>
+          </ul>
+        </nav>
+        <button class="button">Get Started</button>
       </div>
     </header>
+
+    <main>
+      
+    </main>
 
     <script type="module" src="/main.js"></script>
   </body>
